Fix footer font size on small screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -504,7 +504,7 @@ footer {
       font-size: 0.9rem;
   }
 
-  .footer {
+  footer {
     font-size: 0.9rem;
   }
 }
@@ -529,18 +529,14 @@ footer {
   }
 }
 
-@media screen {
-  
-}
-.keep-shopping-btn {
-  background-color: black;
-}
-
 @media (max-width: 490px) {
   .keep-shopping-btn {
       margin-bottom: 10px;
   }
 }
+
+
+
 
 
 
